--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -935,31 +935,28 @@ Such an interpretation is adopted by Eriksson and colleagues using gameplay desi
 
 <!-- **In terms of recommendations for researchers / practitioners of an intermediate framework:** -->
 
-Waite and colleagues propose that abstraction should be taught to pupils [@waite_abstraction_2016].
+Waite and colleagues propose that abstraction should be explcitly taught even to younger pupils [@waite_abstraction_2016]. Waite and colleagues [@waite_abstraction_2018-1] also propose the utility of awareness of LOA in terms of learners knowing at what level of abstraction they are operating, although the evidence is not representative and authors call for further research.
 
-Waite and colleagues also propose the utility of awareness of LOA in terms of learners knowing at what level of abstraction they are operating, although the authors call for further to confirm findings  [@waite_abstraction_2018-1].
-
-As a challenge these findings, My own notes and reflections in appendix.learning map cautioned me against such shifts in perspectives for fear of interrupting the flow of participant making. I had a reluctance to shift learners away from the practical implementation of repeated game design patterns to focus on more abstract, de-contextualised conceptions of the knowledge. My concern hinged on the potential disorientation of imposed shifts of focus. There were already shifting from the larger goal of making an engaging game for a real and imagined audience to a narrower goal of implementing a game design pattern and the technical actions and operations needed to complete it. This chapter has outlined the potential of GDP concepts, especially used within playtesting, to support these participant shifts in perspective. To then add an additional goal of then connecting to abstract curricular concepts seemed counter productive to the overall aim of acculturation to game making tools and processes and developing an inclusive idioculture.
+As a challenge these findings, my own notes and reflections in appendix.learning map cautioned me against explicit teaching of abstraction and imposing shifts in perspectives for fear of interrupting the flow of participant making. As such this research has only more theoretical propositions rather than participant data.
 
 
-As such this research has only more theoretical propositions rather than participant data. However, my reflections do support a proposition that there is  utility is that facilitators to be aware of the level of abstraction both that present in different elements of project learning design and that of the concepts that learners are working with. Different purposes and contexts of learning may require different interpretations, for example greater awareness of abstract concepts for reasons of assessment.
+<!-- As such this research has only more theoretical propositions rather than participant data. -->
 
-According to [@barendregt_intermediate-level_2018]  when choosing design patterns, choosing a suitable the level of abstraction is recommended. The evidence and examples surfaced in this paragraph support a view of GDPs, as an productive intermediate-level framework and contributes a series of grounded pedagogical instances via examples. It also proposes GDPs as potentially more productive and accessible framework in terms of pedagogical uses than that of computational thinking when making games.
+However, in terms of participant experiences, it is clear from this chapters findings that learners are shifting between LOA without explicit in the process of the use of and contribution to this learning design. Participant perspectives shift between the wider goal of making an engaging game for a real and imagined audience to a narrower goal of implementing a game design pattern and the technical actions and operations needed to complete it. This chapter has outlined the potential of GDP concepts, especially used within playtesting, to support these participant shifts in perspective. In this context I judged the imposition of an additional goal of understanding abstract curricular concepts as counter productive to the overall aim of acculturation to game making tools and processes and developing an inclusive idioculture. I had a reluctance to shift learners away from the practical implementation of repeated game design patterns to focus on more abstract, de-contextualised conceptions of the knowledge. My concern also reflected potential disorientation and reduced experiences of agency from imposed shifts of focus rather than self-initiated ones. I also propose that the utilty take the time to interrupt flow to explicitly teach abstraction, and abstract CT concepts, apart from if understanding of such concepts are required by curriculum contrainst, would require further research to justify.
 
-**integrate better**
+On the other hand, my reflections support a proposition that there is utility for facilitators to be aware of the level of abstraction both that present in different elements of project learning design and that of the concepts that learners are working with. Different purposes and contexts of learning may require different interpretations, for example greater awareness of abstract concepts for reasons of assessment. According to [@barendregt_intermediate-level_2018], in their identification of design patterns as intermediate level construct, identifying a suitable the level of abstraction is recommended to best support the goals of learners FIND REASON.  Waite and colleagues [@waite_abstraction_2018-1], also identify the intermediate design level of the LOA model as that suitable for supporting grounded abstraction in learner coding. The evidence and examples surfaced in this paragraph support a view of GDPs, as an productive intermediate-level framework and contributes a series of grounded pedagogical instances via examples. It also proposes GDPs as potentially more productive and accessible framework in terms of pedagogical uses than that of computational thinking when making games.
 
-Beyond changing perspectives in participants facilitated by GDPs outline above, addressing the impact of scaffolding awareness of and reflection on shifts in levels of abstraction in the coding and design process, may be tangential to this study, it is a potentially productive strand of future investigation.  
+
+### Future work on abstraction, layers of abstraction GDPs and the MDA framework
+
+**Move to conclusion or appendix? - appendix for now?**
 
 Levels of abstraction and shifting perspectives also exist in formal analysis of game design frameworks [Salen, and MDA].
-In the theoretical underpinning, Aesthetics are the first experience of the user, and the designer most closely aligned with mechanics.
-
-Could awareness of this their shifts in perspective in relation to this MDA framework be helpful to novices.
+In the theoretical underpinning, Aesthetics are the first experience of the user, and the designer most closely aligned with mechanics. Could awareness of this their shifts in perspective in relation to this MDA framework be helpful to novices.
 
 Could link between the MDA framework and main areas of GDPs can be used to deepen a possibly profitable connection to professional design lenses theory practices?
 
-Other questions concerning LOA for participants / facilitators.
-
-This learnign design could be a good base to use to answer those questions.
+This learning design could be a good base to use to answer those questions.
 
 <!-- As explored in the design chapter, later revisions of the design of supporting materials for each GDP included links to online descriptions of design, systems and computational concepts. Thus, beginning with experience and progressing to analysis in a sway that mirrors reflective professional practice. However analysis of my journal entries show  -->
 
@@ -967,41 +964,45 @@ This learnign design could be a good base to use to answer those questions.
 SHIFT LATER?
 As previously explored I had a reluctance to shift learners away from the practical implementation of repeated game design patterns to focus on more abstract, de-contextualised conceptions of the knowledge. My concern hinged on the potential disorientation of imposed shifts of focus between different stages of creation the object of their activity shifts from the larger goal of making an engaging game to a narrower goal of implementing a game design pattern and the technical actions and operations needed to complete it. -->
 
-
-
 <!-- The varied use of the collection and individuals gameplay patterns and concepts, can be examined using the lenses of the MDA framework.  
 - Home knowledge of mechanics drove many of the requests for GDPs from popular medium of retro games  
 - The norming practices often focus on the game feel, which relates most directly to the dynamics lens.  
 - Aesthetics and the end user experience motivated some users greatly, while it is not clear if this game code changes in this dimensions fully constitute a gameplay design pattern, they are an important inclusive element of the design. -->
 
 
-#### Synthesis between intermediate and empirical/theoretical perspectives.
+
+
+
+
+
+### Implications and beginnings of suggestions for practitioners to support inclusive pedagogical approach -
+
+The observations of this chapter show the advantages of GDP as an intermediate, empirical design framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers.
+
+GDPs create a tangible link between concrete player experience and the affordances of a guided creative process. Learners use of GDP as relatable and flexible constructs that facilitate communication, sustaining engagement, planning and division of labour.
+
+The creation of designed objects using GDPS aid the personal appropriation and the propagation of technical and social processes game making practices.  
+
+
+
+**Synthesis between intermediate and empirical/theoretical perspectives.**
 
 RETURNING TO WHAT IS FOUND IN THE DATA - A CELEBRATION OF THE CONCRETE - AND UTITILY OF THE MID - LEVEL APPROACH
 
 Thus this chapter returns to celebrate with Papert and Turkle's the process of concrete tinkering, but also to suggest that it is potentially augmented, in terms of wider accessibility, with the use of design patterns as a germ cell concept. This approach is flexible and potentially response whilst still retaining a unifying pedagogical approach.
 
-In many of the outlined uses of GDPs in chapter we can see processes at play that help bridge shifts in goals between activity systems and navigation between one sub-goal and the nexts.  
-Any other analysis on the part of the participant can wait until the process becomes more familiar.
+In many of the outlined uses of GDPs in chapter we can see processes at play that help bridge shifts in goals between activity systems and navigation between one sub-goal and the nexts. Any other analysis on the part of the participant can wait until the process becomes more familiar.
 
 This approach is aligned to inductive research processes. Finding useful abstractions only after immersing ones-self in the detail. Previously abstract concepts or processes become concrete through familiarisation via direct use and indirect observations through community participation.
 
 
-**Some of the following processes stand out for particular promise.** LINK TO THE SUGGESTIONS FOR PractitionerS.
-
-Both the GDPs and the sub-actions of the wider activity design become short-cuts which stand in for previously tricky to complete set of actions.
-
-Rather than promising the transfer abstract concepts to other domains, we see learners build competency in participation in replicable processes. These processes which aid future iterations of the GDP implementation design cycle. The process of operationalisation of these sets of actions contributes to the creation of an informal, complex networked resource of operations which complement the more visible curated catalogue of GDPs.
-
-Game design patterns or their fragments are used as a form of design short cuts. Examples from the above include, _get an enemy in_ , _animate player_ or _get it in the game_ (when referring to transferring an graphical asset from authoring tool to the coding environment). The advantages of such shortcuts are, as discussed, to help with the prioritisation and ideation processes, to facilitate peer propagation of ideas, and potentially to inform debugging and improvements to increase game playability.
-
-IS THIS THE RIGHT PLACE?
-There are challenges of the use of these short cuts and at a more general the design choice to lead with a menu of intermediate-level constructs in the form of a menu of GDPs. There may be confusion over use of terms to new comers and these GPD related terms may hide more complex patterns within the name. For example, the shortcuts in Mark and Ed's interaction hides a large amount of problems solving which seems "overwhelming". GDPs can limit the ideation process through an accelerated approach. Also as the menus themselves are not all used by students, and while GDPs do propagate from student to student, which risk further constraints on the process of asking questions about user experience and exploring ideas before committing to implementation.
+**Some of the following processes stand out for particular promise for practitioners** LINK TO THE SUGGESTIONS FOR PractitionerS.
 
 
-### A discussion of aspects of culture, home interests and evolving participation in an idioculture
+#### Practioners can use GDPs to foster of culture, home interests and evolving participation in an idioculture
 
-HOWE TO MAKE A LINK?
+
+While beyond the remit of this thesis, elements of FoK and FoI, x and y,  align with inclusive processes and ethos behind PBL and UMC.
 
 Turning to another aspect of concrete / relatable experience.
 
@@ -1019,17 +1020,15 @@ Recalling that cite one of the challenges of learning coding
 The cultural aspects of the learning community are further explored in Chapter 7.
 Is there something that merits mentioning here as a link within Ch.7?
 
+#### GDPs again  
+Both the GDPs and the sub-actions of the wider activity design become short-cuts which stand in for previously tricky to complete set of actions.
 
-### Implications and beginnings of suggestions for practitioners to support inclusive pedagogical approach -
+Rather than promising the transfer abstract concepts to other domains, we see learners build competency in participation in replicable processes. These processes which aid future iterations of the GDP implementation design cycle. The process of operationalisation of these sets of actions contributes to the creation of an informal, complex networked resource of operations which complement the more visible curated catalogue of GDPs.
 
-While beyond the remit of this thesis, elements of FoK and FoI, x and y,  align with inclusive processes and ethos behind PBL and UMC.
+Game design patterns or their fragments are used as a form of design short cuts. Examples from the above include, _get an enemy in_ , _animate player_ or _get it in the game_ (when referring to transferring an graphical asset from authoring tool to the coding environment). The advantages of such shortcuts are, as discussed, to help with the prioritisation and ideation processes, to facilitate peer propagation of ideas, and potentially to inform debugging and improvements to increase game playability.
 
-The observations of this chapter show the advantages of GDP as an intermediate, empirical design framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers.
-
-GDPs create a tangible link between concrete player experience and the affordances of a guided creative process. Learners use of GDP as relatable and flexible constructs that facilitate communication, sustaining engagement, planning and division of labour.
-
-The creation of designed objects using GDPS aid the personal appropriation and the propagation of technical and social processes game making practices.  
-
+IS THIS THE RIGHT PLACE?
+There are challenges of the use of these short cuts and at a more general the design choice to lead with a menu of intermediate-level constructs in the form of a menu of GDPs. There may be confusion over use of terms to new comers and these GPD related terms may hide more complex patterns within the name. For example, the shortcuts in Mark and Ed's interaction hides a large amount of problems solving which seems "overwhelming". GDPs can limit the ideation process through an accelerated approach. Also as the menus themselves are not all used by students, and while GDPs do propagate from student to student, which risk further constraints on the process of asking questions about user experience and exploring ideas before committing to implementation.
 
 
 <!-- NOTE -  REFRAMING WITH A FOCUS ON AGENCY - IDEALLY THE LATER -->
@@ -1056,6 +1055,7 @@ The process of creating a learning design where students were able to choose fro
 
 The processes described above align with PBL and UDL in a way that merits further investigation in different settings.
 
+MOVE UP?
 As explored in the literature review a key challenge to project based learning is finding appropriate conceptual and practical frameworks to scaffold domain specific working practices [@barron_doing_1998]. Different types of scaffolding are available to support PBL and the authors highlight a dialectical tension between engagement via tinkering and pushing "principled understanding" [@barron_doing_1998, p.63].
 
 Design patterns have been explored as a form of scaffolding [@ertmer_scaffolding_2019] for project based learning experiences. Research on design online experiences shows value in interrelated scenarios, features and underlying patterns and principles [@mor_assessing_2014; @kali_collaborative_2006].
