--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -971,10 +971,6 @@ As previously explored I had a reluctance to shift learners away from the practi
 
 
 
-
-
-
-
 ### Implications and beginnings of suggestions for practitioners to support inclusive pedagogical approach -
 
 The observations of this chapter show the advantages of GDP as an intermediate, empirical design framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers.
@@ -996,7 +992,35 @@ In many of the outlined uses of GDPs in chapter we can see processes at play tha
 This approach is aligned to inductive research processes. Finding useful abstractions only after immersing ones-self in the detail. Previously abstract concepts or processes become concrete through familiarisation via direct use and indirect observations through community participation.
 
 
-**Some of the following processes stand out for particular promise for practitioners** LINK TO THE SUGGESTIONS FOR PractitionerS.
+
+### Simple table of uses
+
+| Participants use of Game Design Patterns (GDPs) from thematic analysis of video data                   |                                                                                                  |
+| ------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------ |
+| GDPs can assist project navigation, acting as a framework for code examples and step-by-step tutorials | GDPs can scaffold the ideation processes                                                         |
+| GDPs aid the process of division of labour                                                             | GDP concepts are used in emerging technical processes                                            |
+| GDPs facilitate learners to design for others                                                          | GDP concepts and language used in informal feedback for peers to influence modification of games |
+| GDPs are propagated into the community through playtesting                                             | GDPs facilitate the use of wider funds of knowledge from home and hobby settings                 |
+| GDPs in the personal appropriation of concepts and processes                                           |                                                                                                  |
+PERHAPS REPLACE THIS TABLE WITH THE MORE DESCRIPTIVE ONE LINKED BELOW.
+
+#### Full table of GDP use with supporting evidence
+
+The use of GDPs by participants on now presented in summary via in table form.
+
+The following table outlines the principle different uses of GDP in the data analysed. The next to last column lists example behaviour and notes vignettes or appendieces where the behaviour can be found in situ with more detailed analysis. The final column indicates how many of the 12 in-depth session transcriptions the behaviour was found within.
+
+It is important to recall the purpose and limitation of these figures outlined in Chapter 4, that this is not designed to claim efficacy of the learning design or to be representative of an average participant (which would require follow up studies of different design).
+<!-- Instead the potential of this learning design is of most value.   -->
+
+
+
+SUMMARY TABLE HERE -
+https://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/edit
+
+ADD IN WHERE IN THE EVIDENCE IS THIS BEHAVIOUR NOTED. Perhaps break down by case study / session analysed.  
+
+
 
 
 #### Practioners can use GDPs to foster of culture, home interests and evolving participation in an idioculture
@@ -1067,7 +1091,9 @@ In its engagement with participant choice over which patterns to implement, and 
 <!-- NOTE - Lots of work on pedagogy of e learning done - but now seems quite dated? How did it stand up to time?  -->
 
 
-#### Returning to some of the tensions explore in the last chapter.
+
+## Chapter Conclusion
+
 
 #### Tensions between facilitating agency and norming practices - REWRITE AS A WAY OF OPENING THIS TOPIC AND CLOSING OFF GDPS
 
@@ -1086,37 +1112,9 @@ The following chapter begins with a deeper exploration of learner agency in rela
 SOME MORE DETAILED SYNTHESIS OF GDP AND AGENCY.
 
 
-
-### Simple table of uses
-
-| Participants use of Game Design Patterns (GDPs) from thematic analysis of video data                   |                                                                                                  |
-| ------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------ |
-| GDPs can assist project navigation, acting as a framework for code examples and step-by-step tutorials | GDPs can scaffold the ideation processes                                                         |
-| GDPs aid the process of division of labour                                                             | GDP concepts are used in emerging technical processes                                            |
-| GDPs facilitate learners to design for others                                                          | GDP concepts and language used in informal feedback for peers to influence modification of games |
-| GDPs are propagated into the community through playtesting                                             | GDPs facilitate the use of wider funds of knowledge from home and hobby settings                 |
-| GDPs in the personal appropriation of concepts and processes                                           |                                                                                                  |
-PERHAPS REPLACE THIS TABLE WITH THE MORE DESCRIPTIVE ONE LINKED BELOW.
-
-#### Full table of GDP use with supporting evidence
-
-The use of GDPs by participants on now presented in summary via in table form.
-
-The following table outlines the principle different uses of GDP in the data analysed. The next to last column lists example behaviour and notes vignettes or appendieces where the behaviour can be found in situ with more detailed analysis. The final column indicates how many of the 12 in-depth session transcriptions the behaviour was found within.
-
-It is important to recall the purpose and limitation of these figures outlined in Chapter 4, that this is not designed to claim efficacy of the learning design or to be representative of an average participant (which would require follow up studies of different design).
-<!-- Instead the potential of this learning design is of most value.   -->
-
-
-
-SUMMARY TABLE HERE -
-https://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/edit
-
-ADD IN WHERE IN THE EVIDENCE IS THIS BEHAVIOUR NOTED. Perhaps break down by case study / session analysed.  
-
-## Chapter Conclusion
-
 ### Summary of the uses of Game Design Patterns
+
+DONE ALREADY?  MOVE UP?
 
 GDPs served both researchers and participants by _providing a common language_ to clarify first learner expression and researcher's analysis of gameplay experience. Gdps functioned as an _inspirational structured design tool_ Eriksson's study outlines the utility notes teacher observations that GDPs served to stimulate learner imagination and ideation stages. The use of a patterns and their collection as a form _intermediate-level knowledge_ by both researchers and participants is under-explored in this study but builds on related work by two of the authors and is explored in the next part of this chapter.
 
