--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -973,11 +973,7 @@ As previously explored I had a reluctance to shift learners away from the practi
 
 ### Implications and beginnings of suggestions for practitioners to support inclusive pedagogical approach -
 
-The observations of this chapter show the advantages of GDP as an intermediate, empirical design framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers.
 
-GDPs create a tangible link between concrete player experience and the affordances of a guided creative process. Learners use of GDP as relatable and flexible constructs that facilitate communication, sustaining engagement, planning and division of labour.
-
-The creation of designed objects using GDPS aid the personal appropriation and the propagation of technical and social processes game making practices.  
 
 
 
@@ -1019,9 +1015,6 @@ SUMMARY TABLE HERE -
 https://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/edit
 
 ADD IN WHERE IN THE EVIDENCE IS THIS BEHAVIOUR NOTED. Perhaps break down by case study / session analysed.  
-
-
-
 
 #### Practioners can use GDPs to foster of culture, home interests and evolving participation in an idioculture
 
@@ -1077,6 +1070,8 @@ For example, the use of CT concepts in a framework, listed as part of the initia
 
 The process of creating a learning design where students were able to choose from a curated set of game design patterns, evolved from open approach in P1 and can be seen as a form of restricting possible activity. The positive impact of restricted choice of activities are outlined in varied educational concepts including Bruner's reducing degrees of freedom [@wood_role_1976]. In the 3M design the process of offering a choice of games patterns emerged to counter a previous open design process of which many learners found too challenging. The patterns emerged chiefly in response to requests from learners and partly from facilitator decision making which broadly matched the criteria of the other study. However, in Eriksson's study the authors selected from an extensive, pre-existing pattern collections [@bjork_patterns_2005].
 
+Eriksson's study also outlines the utility notes teacher observations that GDPs served to stimulate learner imagination and ideation stages.
+
 The processes described above align with PBL and UDL in a way that merits further investigation in different settings.
 
 MOVE UP?
@@ -1095,48 +1090,44 @@ In its engagement with participant choice over which patterns to implement, and 
 ## Chapter Conclusion
 
 
-#### Tensions between facilitating agency and norming practices - REWRITE AS A WAY OF OPENING THIS TOPIC AND CLOSING OFF GDPS
 
 <!-- Participants are able to use the affordances of the existing learning design and add their own evolving practice to them as a way of expressing and building agency. -->
 
 
-This chapter has outlined the evolving use of GDPs as a meditational strategy to develop coding repertoires that are often shared.  While the development of agency has not been the primary focus of this chapter, this processes can be directly linked to Sannino conception of transformative agency through double stimulation (TADS).
 
-IS THIS A TENSION WORTH HIGHLIGHTING MORE CLEARLY?
-However, as a seeming counterpoint to this growing agency is the norming effects of concepts that gain community currency in playtesting. The repeated attempts by participants to make the jumping mechanic of Molly less frustrating can be seen as a potential drag on the agency or autonomy of Molly as a designer. However this may be a false dichotomy. Such norming practices can be seen from a different perspective. IS THIS EXPLORED IN THE NEXT CHAPTER?
+The observations of this chapter show the advantages of GDP as an intermediate, relatable design framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers.
+
+**Practical**
+The use of GDP concepts can create a tangible link between concrete player experience and the affordances of a guided creative process. Learners use of GDP as relatable and flexible constructs that facilitate communication, sustaining engagement, planning and division of labour. On a cultural plane, using GDPs can aid the propagation of technical and social processes game making practices within an emerging community of learners.
+
+GDPs served both researchers and participants by _providing a common language_ to clarify first learner expression and researcher's analysis of gameplay experience. Gdps functioned as an _inspirational structured design tool_  The utility of a patterns and their collection as a form _intermediate-level knowledge_ by both researchers and participants  is shown in part by in a growing sense of mastery towards technical processes becoming second nature and the resulting ability to share them with family and other peer groups.
+
+**Theorietical**
+(On a theoretical plane,)This chapter has outlined the evolving use of GDPs as a meditational strategy to develop coding repertoires that are often shared.
+
+CHAT frames diverse use of shared resources and concepts, in this case GDPs, as meditational strategies which can involved into repertoires of practice [@lecusay_telementoring_2015] & guitierez?.  
+
+These concepts and this framing is explore in the next chapter with examples that extend beyond the use of GDPs to other cultural processes.
+
+
+
+**Transition to next chapter on agency**
+
+While the development of agency has not been the primary focus of this chapter, this processes can be directly linked to Sannino conception of transformative agency through double stimulation (TADS).
+
 The following chapter begins with a deeper exploration of learner agency in relation to existing research in this domain.
+
+The next chapter explores cultural aspects in greater detail continuing to explore emergent agency in this design by primarily focusing on a drama process as a lens for analysis.
+
+
+
 
 <!-- Examples of this dynamic agency include the use of graphical code structures, asking for peer or facilitator support etc. -->
 <!-- While the process of direction may be less totally learner-driven approach than the first iteration of the learning design P1, working with a starting menu of game patterns with support still provides challenges to learners and complexity of working processes. Design blockages still occur, and participants have to work with facilitators in depth to overcome issues. There is the possibility to adapt existing patterns, to add new patterns from outside the curated collection or to shift to new game paradigm requiring a different set of patterns altogether. -->
 
-SOME MORE DETAILED SYNTHESIS OF GDP AND AGENCY.
 
-
-### Summary of the uses of Game Design Patterns
-
-DONE ALREADY?  MOVE UP?
-
-GDPs served both researchers and participants by _providing a common language_ to clarify first learner expression and researcher's analysis of gameplay experience. Gdps functioned as an _inspirational structured design tool_ Eriksson's study outlines the utility notes teacher observations that GDPs served to stimulate learner imagination and ideation stages. The use of a patterns and their collection as a form _intermediate-level knowledge_ by both researchers and participants is under-explored in this study but builds on related work by two of the authors and is explored in the next part of this chapter.
-
-**GDPs can be used as meditational strategies within the AT framework and thus conceptual understanding of participant agency**
-
-CHAT frames diverse use of shared resources and concepts, in this case GDPs, as meditational strategies which can involved into repertoires of practice [@lecusay_telementoring_2015] & guitierez?.  
 
 <!-- THIS PERHAPS IS FOR CONCLUSION? This can be understood in relation to relevant socio cultural theory in the following way, affordences, mutual tool development, FoI, etc. -->
-
-We can frame how these process contribute to the development of agency on the part of participants in the following way.
-
-
-These concepts and this framing is explore in the next chapter with examples that extend beyond the use of GDPs to other cultural processes.
-
-### Transition to next chapter
-
-This chapter focused on GDPs which while mostly interpersonal, guided participation also touched on emerging cultural elements of the learning community.
-
-While limited in this respect, data indicated the positive impact on participants in implementation of GDPs?
-
-This is shown particularly in a growing sense of mastery towards technical processes becoming second nature and the resulting ability to share them with family and other peer groups. This complements previous observations on the development and nature of agency in this learning design.  The next chapter explores cultural aspects in greater detail continuing to explore emergent agency in this design by primarily focusing on a drama process as a lens for analysis.
-
 
 
 
@@ -1277,3 +1268,10 @@ Dave  – Yeah we can do that. Save that for version 1.1
 <!-- This pattern completion is mirrored in the work of other pairs. Thus replicating is a kind of participation in an emerging community.
 There is also a link made by the parent to previous working practices. Using a paper book to make a sketch of the work to be completed. -->
 <!-- These kinds of shifts of activity and cultural practices brought by the participants also feed into the ongoing culture of the game making community. For example the use of paper designs and paper prototyping that for some of the home ed families was a familiar practice was something that I adopted more broadly after observing the families involved. -->
+
+MOVED FROM DISCUSSION
+**A tension in use of norming practices and participant choice?**
+
+<!-- MOVE THIS TO NEXT CHAPTER DISCUSSION?
+However, as a seeming counterpoint to this growing agency is the norming effects of concepts that gain community currency in playtesting. The repeated attempts by participants to make the jumping mechanic of Molly less frustrating can be seen as a potential drag on the agency or autonomy of Molly as a designer. However this may be a false dichotomy. Such norming practices can be seen from a different perspective according to Rogoff, as a productive nudge to get real.
+ IS THIS EXPLORED IN THE NEXT CHAPTER? -->
