--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -908,7 +908,7 @@ While I address areas for future research in the conclusion, a proposed benefit 
 
 ### Discussion of findings in relation to Computational Thinking and  abstraction
 
-**patterns as a more relatable abstract framework than more abstract interpretations of computational thinking following Wing.**
+
 
 
 #### Design patterns as a intermediate-level, pedagogical framework compared to computational thinking
@@ -935,14 +935,11 @@ Such an interpretation is adopted by Eriksson and colleagues using gameplay desi
 
 <!-- **In terms of recommendations for researchers / practitioners of an intermediate framework:** -->
 
-Waite and colleagues propose that abstraction should be explcitly taught even to younger pupils [@waite_abstraction_2016]. Waite and colleagues [@waite_abstraction_2018-1] also propose the utility of awareness of LOA in terms of learners knowing at what level of abstraction they are operating, although the evidence is not representative and authors call for further research.
-
-As a challenge these findings, my own notes and reflections in appendix.learning map cautioned me against explicit teaching of abstraction and imposing shifts in perspectives for fear of interrupting the flow of participant making. As such this research has only more theoretical propositions rather than participant data.
-
+Waite and colleagues propose that abstraction should be explcitly taught even to younger pupils [@waite_abstraction_2016]. Waite and colleagues [@waite_abstraction_2018-1] also propose the utility of awareness of LOA in terms of learners knowing at what level of abstraction they are operating, although the evidence is not representative and authors call for further research. As a challenge these findings, my own notes and reflections in appendix.learning map cautioned me against explicit teaching of abstraction and imposing shifts in perspectives for fear of interrupting the flow of participant making.
 
 <!-- As such this research has only more theoretical propositions rather than participant data. -->
 
-However, in terms of participant experiences, it is clear from this chapters findings that learners are shifting between LOA without explicit in the process of the use of and contribution to this learning design. Participant perspectives shift between the wider goal of making an engaging game for a real and imagined audience to a narrower goal of implementing a game design pattern and the technical actions and operations needed to complete it. This chapter has outlined the potential of GDP concepts, especially used within playtesting, to support these participant shifts in perspective. In this context I judged the imposition of an additional goal of understanding abstract curricular concepts as counter productive to the overall aim of acculturation to game making tools and processes and developing an inclusive idioculture. I had a reluctance to shift learners away from the practical implementation of repeated game design patterns to focus on more abstract, de-contextualised conceptions of the knowledge. My concern also reflected potential disorientation and reduced experiences of agency from imposed shifts of focus rather than self-initiated ones. I also propose that the utilty take the time to interrupt flow to explicitly teach abstraction, and abstract CT concepts, apart from if understanding of such concepts are required by curriculum contrainst, would require further research to justify.
+Despite this, in terms of participant experiences, it is clear from this chapters findings that learners _are_ shifting between LOA without explicit in the process of the use of and contribution to this learning design. Participant perspectives shift between the wider goal of making an engaging game for a real and imagined audience to a narrower goal of implementing a game design pattern and the technical actions and operations needed to complete it. This chapter has outlined the potential of GDP concepts, especially used within playtesting, to support these participant shifts in perspective. In this context I judged the imposition of an additional goal of understanding abstract curricular concepts as potentially counter productive to the overall aim of acculturation to game making tools and processes and developing an inclusive idioculture. I had a reluctance to shift learners away from the practical implementation of repeated game design patterns to focus on more abstract, de-contextualised conceptions of the knowledge. My concern also reflected potential disorientation and reduced experiences of agency from imposed shifts of focus rather than self-initiated ones. I also propose that the utilty take the time to interrupt flow to explicitly teach abstraction, and abstract CT concepts, apart from if understanding of such concepts are required by curriculum contrainst, would require further research to justify.
 
 On the other hand, my reflections support a proposition that there is utility for facilitators to be aware of the level of abstraction both that present in different elements of project learning design and that of the concepts that learners are working with. Different purposes and contexts of learning may require different interpretations, for example greater awareness of abstract concepts for reasons of assessment. According to [@barendregt_intermediate-level_2018], in their identification of design patterns as intermediate level construct, identifying a suitable the level of abstraction is recommended to best support the goals of learners FIND REASON.  Waite and colleagues [@waite_abstraction_2018-1], also identify the intermediate design level of the LOA model as that suitable for supporting grounded abstraction in learner coding. The evidence and examples surfaced in this paragraph support a view of GDPs, as an productive intermediate-level framework and contributes a series of grounded pedagogical instances via examples. It also proposes GDPs as potentially more productive and accessible framework in terms of pedagogical uses than that of computational thinking when making games.
 
@@ -972,18 +969,12 @@ As previously explored I had a reluctance to shift learners away from the practi
 
 
 ### Implications and beginnings of suggestions for practitioners to support inclusive pedagogical approach -
+<!--
+RETURNING TO WHAT IS FOUND IN THE DATA - A CELEBRATION OF THE CONCRETE - AND UTITILY OF THE MID - LEVEL APPROACH -->
 
+Returning to issues of inclusive approaches to pedagogy, the findings of this chapter resonates with  Papert and Turkle's celebration of the process of concrete tinkering. They also suggest that it is potentially augmented, in terms of wider accessibility, with the use of design patterns as a germ cell concept. This approach is flexible and potentially responsive whilst still retaining a unifying pedagogical approach.
 
-
-
-
-**Synthesis between intermediate and empirical/theoretical perspectives.**
-
-RETURNING TO WHAT IS FOUND IN THE DATA - A CELEBRATION OF THE CONCRETE - AND UTITILY OF THE MID - LEVEL APPROACH
-
-Thus this chapter returns to celebrate with Papert and Turkle's the process of concrete tinkering, but also to suggest that it is potentially augmented, in terms of wider accessibility, with the use of design patterns as a germ cell concept. This approach is flexible and potentially response whilst still retaining a unifying pedagogical approach.
-
-In many of the outlined uses of GDPs in chapter we can see processes at play that help bridge shifts in goals between activity systems and navigation between one sub-goal and the nexts. Any other analysis on the part of the participant can wait until the process becomes more familiar.
+In many of the outlined uses of GDPs in chapter we can see processes at play that help bridge shifts in goals between activity systems and navigation between one sub-goal and the next. Any other analysis on the part of the participant can wait until the process becomes more familiar.
 
 This approach is aligned to inductive research processes. Finding useful abstractions only after immersing ones-self in the detail. Previously abstract concepts or processes become concrete through familiarisation via direct use and indirect observations through community participation.
 
@@ -1016,7 +1007,7 @@ https://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/
 
 ADD IN WHERE IN THE EVIDENCE IS THIS BEHAVIOUR NOTED. Perhaps break down by case study / session analysed.  
 
-#### Practioners can use GDPs to foster of culture, home interests and evolving participation in an idioculture
+#### Practitioners can use GDPs to foster of culture, home interests and evolving participation in an idioculture
 
 
 While beyond the remit of this thesis, elements of FoK and FoI, x and y,  align with inclusive processes and ethos behind PBL and UMC.
